--- a/index.html
+++ b/index.html
@@ -1,78 +1,86 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Luscinia : Bioacoustic analysis of field recordings">
+    <title>Luscinia by rflachlan</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Luscinia</title>
   </head>
-
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/rflachlan/Luscinia">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/rflachlan/Luscinia/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/rflachlan/Luscinia/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/rflachlan/Luscinia">View on GitHub</a>
+    <div class="wrapper">
 
-          <h1 id="project_title">Luscinia</h1>
-          <h2 id="project_tagline">Bioacoustic analysis of field recordings</h2>
+      <section>
+        <div id="title">
+          <h1>Luscinia</h1>
+          <p>Bioacoustic analysis of field recordings</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/rflachlan">rflachlan</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/rflachlan/Luscinia/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/rflachlan/Luscinia/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+        <h1>
+<a id="welcome-to-luscinia" class="anchor" href="#welcome-to-luscinia" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Luscinia!</h1>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<p>This is the website for Luscinia: software for bioacoustic archiving, measurement and analysis.</p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Luscinia is written and maintained by <a href="http://www.sbcs.qmul.ac.uk/staff/robertlachlan.html">Robert Lachlan</a>, in the <a href="http://www.sbcs.qmul.ac.uk/research/researchdivisions/psychology/">Department of Biological and Experimental Psychology</a>, in the <a href="http://www.sbcs.qmul.ac.uk">School of Biological and Chemical Sciences</a> at <a href="http://www.qmul.ac.uk">Queen Mary University of London</a>.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p>Details and a manual about it can be found on its <a href="https://github.com/rflachlan/Luscinia/wiki">wiki</a>.<br>
+It can be downloaded from the <a href="https://github.com/rflachlan/Luscinia/releases">releases</a> page.</p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<h1>
+<a id="what-is-luscinia-for" class="anchor" href="#what-is-luscinia-for" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is Luscinia for?</h1>
 
 <h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<a id="archiving-scientific-wildlife-recordings" class="anchor" href="#archiving-scientific-wildlife-recordings" aria-hidden="true"><span class="octicon octicon-link"></span></a>Archiving scientific wildlife recordings.</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Luscinia is built using the H2 database engine. Songs, calls and utterances are stored in databases - that is, their audio files, metadata about where they were recorded, who made them, etc, and measurements of their acoustic properties are all stored in the same easy-to-back-up place.</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="measuring-wildlife-recordings" class="anchor" href="#measuring-wildlife-recordings" aria-hidden="true"><span class="octicon octicon-link"></span></a>Measuring wildlife recordings.</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>Luscinia provides a flexible, fast and reliable way to semi-automatically measure bioacoustic signals. It measures 15 acoustic parameters as contours and hierarchical information about how complex signals are structured.</p>
+
+<h3>
+<a id="analysing-bioacoustic-signals" class="anchor" href="#analysing-bioacoustic-signals" aria-hidden="true"><span class="octicon octicon-link"></span></a>Analysing bioacoustic signals.</h3>
+
+<p>Luscinia implements a wide range of analytical methods, from exporting summary statistics to spreadsheets to its centrepiece: and advanced implementation of the dynamic time warping algorithm. This allows the comparison of disparate and complex signals, and forms the basis for a range of bioinformatic and statistical analyses: multidimensional scaling, dendrograms, geographic analysis, syntax analysis and more.</p>
+
+<h3>
+<a id="luscinia-has-currently-been-used-in-more-than-30-publications-and-is-actively-supported-and-developed" class="anchor" href="#luscinia-has-currently-been-used-in-more-than-30-publications-and-is-actively-supported-and-developed" aria-hidden="true"><span class="octicon octicon-link"></span></a>Luscinia has currently been used in more than 30 publications and is actively supported and developed.</h3>
+
+<p>Spectrogram screen. Users can navigate in the lower "Navigation panel", and measure song elements in the main window. Luscinia provides a fully-featured spectrogram view with a flexible, semi-automated and efficient method to measure songs.
+<img src="https://raw.githubusercontent.com/rflachlan/Luscinia/master/Luscinia/images/SpectScreen.png" alt="Spect"></p>
+
+<p>MDS plot of chaffinch syllables from a whole-population sample. Each dot represents a syllable, and its colour represents its position within a song. Lines connect adjacent syllables within a song. 
+<img src="https://raw.githubusercontent.com/rflachlan/Luscinia/master/Luscinia/images/PrettyMDSPlot.png" alt="MDS Plot"></p>
+
+<p>Dendrogram of chaffinch song-types.
+<img src="https://raw.githubusercontent.com/rflachlan/Luscinia/master/Luscinia/images/SyllableDendrogramPlot.png" alt="Dendrogram Plot"></p>
       </section>
-    </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Luscinia maintained by <a href="https://github.com/rflachlan">rflachlan</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
     </div>
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -83,7 +91,6 @@ $ git checkout gh-pages
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
-
 
   </body>
 </html>
